# homeostat

./: Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: ci.yml  release.yml
adapters/: arbiter.py  clock.py  dashboard.html  dashboard.py  esphome.py  go2rtc.py  ivt490.py  onvif.py  owntracks.py  recorder.py  zigbee2mqtt.py
adapters/assets/: README.md
docs/: design.md
docs/diagrams/: generate.py
docs/wireframes/: generate.py
examples/house/: zones.toml
examples/house/units/: arbiter.toml  dashboard.toml  esphome.toml  evening_lights.toml  recorder.toml  zigbee.toml
examples/starter-house/: .gitignore  README.md  docker-compose.yml  mosquitto.acl  mosquitto.conf  zones.toml
examples/starter-house/units/: arbiter.py  clock.py  clock.toml  dashboard.html  dashboard.py  dashboard.toml  esphome.py  esphome.toml  evening_lights.py  evening_lights.toml  ivt490.py  ivt490.toml  mcp.toml  owntracks.py  owntracks.toml  recorder.py  recorder.toml  zigbee.py  zigbee.toml
scripts/: smoke_image.sh  smoke_starter.sh
sdk/python/: pyproject.toml
sdk/python/homeostat/: __init__.py  automation.py  house.py  keys.py  mqtt.py  session.py
src/: bus.rs  config.rs  content.rs  error.rs  expand.rs  gitinfo.rs  grants.rs  keyspace.rs  lib.rs  main.rs  manifest.rs  pending.rs  plan.rs  repo.rs  validate.rs  world.rs
src/mcp/: http.rs  mod.rs  protocol.rs
src/supervisor/: apply.rs  backoff.rs  mod.rs  process.rs  unit.rs
tests/: arbiter.rs  corpus.rs  dashboard.rs  esphome.rs  evening.rs  fake_esphome.py  fake_go2rtc.py  fake_onvif.py  go2rtc.rs  ivt490.rs  mcp.rs  onvif.rs  owntracks.rs  plan_apply.rs  recorder.rs  supervision.rs  z2m.rs
tests/common/: mod.rs
tests/corpus/: expected_plan.txt
tests/fixture_house/units/: fake.toml
tests/fixture_house_apply/units/: probe.py  probe.toml
tests/fixture_house_evening/: zones.toml
(+84 files in other folders)
