[package]
name = "homeostat"
version = "0.1.0"
edition = "2021"
description = "A household regulator. Text-first home automation core."
license = "Apache-2.0"
default-run = "homeostat"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
# "unstable" for the matching-status API the integration tests use to
# synchronize on subscriber-interest propagation.
zenoh = { version = "1.9", features = ["unstable"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "time", "sync"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
libc = "0.2.186"

[dev-dependencies]
rumqttc = "0.25.1"
# "bundled" so the recorder tests can assert on the store without a system
# libsqlite3; the recorder itself uses Python's stdlib sqlite3.
rusqlite = { version = "0.37", features = ["bundled"] }
