[project]
name = "homeostat"
version = "0.1.0"
description = "Python SDK for homeostat units: bus session, key builders, house repo access"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["eclipse-zenoh~=1.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["homeostat"]
